--- a/app/src/main/res/layout/frame_layout.xml
+++ b/app/src/main/res/layout/frame_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,13 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/img2" />
+        android:src="@drawable/img2"
+        tools:ignore="ContentDescription" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="This is a car"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/this_is_a_car"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold" />
