--- a/app/src/main/res/layout/realtive_layout.xml
+++ b/app/src/main/res/layout/realtive_layout.xml
@@ -79,7 +79,7 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/reg_layout"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="30dp"
         android:background="@color/white"
         android:gravity="center"
         android:text="1"
@@ -87,10 +87,10 @@
 
     <TextView
         android:id="@+id/two"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/reg_layout"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="30dp"
         android:layout_toRightOf="@+id/one"
         android:background="@color/red"
         android:gravity="center"
