--- a/app/src/main/res/drawable/message_bubble_right.xml
+++ b/app/src/main/res/drawable/message_bubble_right.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="2dp"
-        android:color="@color/black" />
-    <corners
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:width="79dp">
+        <rotate
+            android:fromDegrees="-55"
+            android:pivotX="600%"
+            android:pivotY="0%">
+            <shape android:shape="rectangle">
+                <solid android:color="@color/white" />
+            </shape>
+        </rotate>
+    </item>
+    <item android:end="10dp">
+        <shape>
+            <solid android:color="@color/white" />
+            <corners
+                android:bottomLeftRadius="20dp"
+                android:topLeftRadius="20dp"
+                android:topRightRadius="20dp" />
+        </shape>
+    </item>
+</layer-list>
