--- a/app/src/main/res/layout/chat_activity_layout.xml
+++ b/app/src/main/res/layout/chat_activity_layout.xml
@@ -6,6 +6,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_recycler_view_id"
+        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
