--- a/app/src/main/res/layout/recycle_custom_layout.xml
+++ b/app/src/main/res/layout/recycle_custom_layout.xml
@@ -16,9 +16,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:elevation="5dp"
+            app:elevation="50dp"
+            app:cardBackgroundColor="@color/teal_700"
+            android:elevation="15dp"
             app:cardCornerRadius="360dp"
-            app:cardElevation="5dp">
+            app:cardElevation="55dp">
 
                 <TextView
                     android:id="@+id/contact_img_id"
