--- a/app/src/main/res/layout/tab_activity_layout.xml
+++ b/app/src/main/res/layout/tab_activity_layout.xml
@@ -7,12 +7,13 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_id"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         app:tabInlineLabel="true"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/teal_700"
         app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="5dp"
+        app:tabIndicatorFullWidth="true"
         app:tabIndicatorAnimationMode="elastic"
         app:tabSelectedTextColor="@color/white"
         app:tabTextColor="@color/gray" />
