--- a/app/src/main/res/layout/message_items.xml
+++ b/app/src/main/res/layout/message_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/teal_700"
     android:orientation="vertical">
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:visibility="gone">
 
         <androidx.cardview.widget.CardView
             android:layout_width="50dp"
@@ -77,7 +78,8 @@
         android:layout_height="match_parent"
         android:gravity="end"
         android:orientation="horizontal"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/right_message_layout_id"
@@ -141,5 +143,82 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/chat_image_right_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/chat_right_image_id"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="50dp"
+            android:background="@drawable/message_bubble_right"
+            android:padding="10dp"
+            android:scaleType="centerCrop" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:elevation="5dp"
+            app:cardCornerRadius="360dp"
+            app:cardElevation="5dp">
+
+            <TextView
+                android:id="@+id/contact_right_image_view_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#cccccc"
+                android:gravity="center"
+                android:text="@string/aa"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/chat_image_left_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="start"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:elevation="5dp"
+            app:cardCornerRadius="360dp"
+            app:cardElevation="5dp">
+
+            <TextView
+                android:id="@+id/contact_left_image_view_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#cccccc"
+                android:gravity="center"
+                android:text="@string/aa"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/chat_left_image_id"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/message_bubble_left"
+            android:padding="10dp"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
