--- a/app/src/main/res/layout/tab_activity_layout.xml
+++ b/app/src/main/res/layout/tab_activity_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tab_layout_id"
         android:layout_width="wrap_content"
         app:tabInlineLabel="true"
+        app:tabMode="scrollable"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/teal_700"
         app:tabIndicatorColor="@color/white"
