--- a/app/src/main/res/layout/register_activity_layout.xml
+++ b/app/src/main/res/layout/register_activity_layout.xml
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
-                android:background="#1925f7"
+                android:background="@color/blue"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
                 android:text="@string/register"
