--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="green">#06CF0E</color>
     <color name="red">#F44336</color>
     <color name="gray">#A8A8A8</color>
+    <color name="blue">#1925f7</color>
 </resources>
