--- a/app/src/main/res/layout/absolute_layout.xml
+++ b/app/src/main/res/layout/absolute_layout.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ImageView
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="50dp"
-        android:layout_y="100dp"
-        android:text="@string/hello_world"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
+        android:tint="@color/white"
+        android:background="@drawable/btn_backgraund"
+        android:gravity="center"
+        android:padding="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_next"
+        tools:ignore="UseAppTint" />
 
-</AbsoluteLayout>
+</LinearLayout>
